# game-programming-patterns-with-sfml

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  vcpkg.json
.cd-readme/: readme-macos-latest.txt  readme-ubuntu-latest.txt  readme-windows-latest.txt
.github/workflows/: build-cd.yml  build-check.yml  format-check.yml  format-fix.yml
.run-vcpkg/: CMakeLists.txt  CMakePresets.json  vcpkg.json
02-Command/: CMakeLists.txt
Common/: AssetManager.hpp  AssetManager.inl  ImguiLogger.hpp
Patterns/: CMakeLists.txt
Patterns/00-Test/01-Test-01/: CMakeLists.txt
Patterns/00-Test/01-Test-01/src/: main.cpp
Patterns/00-Test/02-Test-02/: CMakeLists.txt
Patterns/00-Test/02-Test-02/src/: main.cpp
Patterns/02-Command/01-Configure-Input-and-Actors/: CMakeLists.txt
Patterns/02-Command/01-Configure-Input-and-Actors/assets/: dwarf.license.txt
Patterns/02-Command/01-Configure-Input-and-Actors/src/: Application.cpp  Application.hpp  AssetManagers.hpp  Command.hpp  Commands.hpp  Dwarf.cpp  Dwarf.hpp  GameActor.hpp  InputHandler.cpp  InputHandler.hpp  JumpCommand.hpp  KeybindUI.cpp  KeybindUI.hpp  SpecialAttackCommand.hpp  StrongAttackCommand.hpp  WeakAttackCommand.hpp  constant.hpp  global.cpp  global.hpp  main.cpp
Sources/: CMakeLists.txt
Sources/02-Command/01-Configure-Input-and-Actors/: CMakeLists.txt
